adding md text to determine testing

--- a/geo/obspy-tws-rf-pyrocko.ipynb
+++ b/geo/obspy-tws-rf-pyrocko.ipynb
@@ -50,6 +50,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Testing telewavesim:"
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {},
    "outputs": [],
@@ -68,6 +77,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Testing rf: "
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {},
    "outputs": [],
@@ -79,6 +97,15 @@
     "print(stream)\n",
     "print('\\nStats:\\n', stream[0].stats)\n",
     "stream[:3].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Testing pyrocko: "
    ]
   },
   {
