added formatting for easier visual scanning

--- a/geo/obspy-tws-rf-pyrocko.ipynb
+++ b/geo/obspy-tws-rf-pyrocko.ipynb
@@ -24,7 +24,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Testing obspy:"
+    "Testing obspy:\n",
+    "==============\n",
+    "\n",
+    "Source: https://github.com/obspy/obspy/wiki\n",
+    "-------------------------------------------"
    ]
   },
   {
@@ -55,7 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Testing telewavesim:"
+    "Testing telewavesim:\n",
+    "====================\n",
+    "\n",
+    "Source: https://paudetseis.github.io/Telewavesim/\n",
+    "-------------------------------------------------\n"
    ]
   },
   {
@@ -82,7 +90,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Testing rf: "
+    "Testing rf: \n",
+    "===========\n",
+    "\n",
+    "Source: https://github.com/trichter/rf\n",
+    "--------------------------------------\n"
    ]
   },
   {
@@ -105,7 +117,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Testing pyrocko: "
+    "Testing pyrocko: \n",
+    "================\n",
+    "\n",
+    "Source: https://pyrocko.org/\n",
+    "----------------------------\n",
+    "\n"
    ]
   },
   {
